[package]
name = "libkey"
version = "0.1.0"
edition = "2024"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"
embassy-stm32 = { version = "0.5.0", features = ["defmt", "stm32f303vc", "rt"] }
cortex-m-semihosting = "0.5.0"
embedded-alloc = "0.7.0"

[dev-dependencies]
defmt-test = "0.3"

[profile.dev]
opt-level = 's'
codegen-units = 1

[profile.release]
opt-level = 's'
codegen-units = 1
lto = 'fat'
debug = 2


